--- a/src/style/myreset.css
+++ b/src/style/myreset.css
@@ -1,30 +1,29 @@
-* {
-  outline: 0;
-  -webkit-text-size-adjust: none;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+/***********************
+something reset by whidy 2017/8/25
+reference
+https://github.com/AllThingsSmitty/css-protips
+
+***********************/
+
+html {
   box-sizing: border-box;
-  &:before, &:after {
-    box-sizing: border-box;
-  }
 }
-
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.5;
   color: #333;
-  background-color: #fff
+  background-color: #fff;
+}
+*, *::before, *::after {
+  outline: 0;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  box-sizing: inherit;
 }
 
-a {
+a,a:hover {
   text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects
-}
-
-a:hover {
-  text-decoration: underline
 }
 
 a:active,
