--- a/src/style/myreset.css
+++ b/src/style/myreset.css
@@ -1,5 +1,6 @@
 /***********************
 something reset by whidy 2017/8/25
+overwrite normalize.css
 reference
 https://github.com/AllThingsSmitty/css-protips
 
@@ -10,7 +11,7 @@ html {
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
+  font-size: 28px;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -39,7 +40,7 @@ strong {
 hr,
 .rule {
   height: 0;
-  margin: 15px 0;
+  margin: 30px 0;
   overflow: hidden;
   background: transparent;
   border: 0;
@@ -84,39 +85,39 @@ h6 {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 64px;
   font-weight: 600
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 48px;
   font-weight: 600
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 600
 }
 
 h4 {
-  font-size: 16px;
+  font-size: 32px;
   font-weight: 600
 }
 
 h5 {
-  font-size: 14px;
+  font-size: 28px;
   font-weight: 600
 }
 
 h6 {
-  font-size: 12px;
+  font-size: 24px;
   font-weight: 600
 }
 
 p {
-  font-size: 14px;
+  font-size: 28px;
   margin-top: 0;
-  margin-bottom: 10px
+  margin-bottom: 20px
 }
 
 small {
